user profile edit page

--- a/src/profileScreen.css
+++ b/src/profileScreen.css
@@ -40,3 +40,24 @@
     font-size:15px;
     padding-left: 20px;
 }
+
+.profile_signout{
+    padding:10px 20px;
+    font-size: 1rem;
+    margin-top: 5%;
+    width: 100%;
+    color: #fff;
+    background-color: #e50914;
+    border: none;
+    cursor: pointer;
+}
+
+.profileScreen_plans {
+margin-top: 20px;
+}
+
+.profileScreen_plans > h3{
+    border-bottom: 1px solid #282c2d;
+    padding-bottom: 10px;
+}
+
